Make streams Java 11 compatible: replace toList() usages